--- a/README
+++ b/README
@@ -1,14 +1,10 @@
-Example skin
+Making skins in MediaWiki shouldn't require a degree in PHP.
 
-This is an example skin showcasing the best practices, a companion to the
-MediaWiki skinning guide available at
-<https://www.mediawiki.org/wiki/Manual:Skinning>.
+Dali makes the skin making process a lot easier for frontend engineers.
 
-The code is released into public domain, which means you can freely copy it,
-modify and release as your own skin without providing attribution and with
-absolutely no restrictions. Remember to change the license information if you
-do not intend to provide your changes on the same terms.
+Run `npm install` and `npm start`.
+Edit the files in the `src` folder and watch your changes appear before your eyes.
 
-See <http://creativecommons.org/publicdomain/zero/1.0/> for full licensing
-details.
-
+When your skin is ready for distribution run `npm run build`.
+This will create a folder in the output folder.
+Move the folder into your MediaWiki skins folder - and your new skin is born!
