--- a/README
+++ b/README
@@ -1,4 +1,5 @@
 Making skins in MediaWiki shouldn't require a degree in PHP.
+See https://skins.wmcloud.org/ and https://github.com/jdlrobson/skins.wmflabs.org for what happened next after this early experiment.
 
 Dali makes the skin making process a lot easier for frontend engineers.
 
